# mycoinevo-core-cpp

./: .gitmodules  CMakeLists.txt  README.md
src/: coinevo_address_utils.cpp  coinevo_address_utils.hpp  coinevo_fee_utils.cpp  coinevo_fee_utils.hpp  coinevo_fork_rules.cpp  coinevo_fork_rules.hpp  coinevo_key_image_utils.cpp  coinevo_key_image_utils.hpp  coinevo_paymentID_utils.cpp  coinevo_paymentID_utils.hpp  coinevo_send_routine.cpp  coinevo_send_routine.hpp  coinevo_transfer_utils.cpp  coinevo_transfer_utils.hpp  coinevo_wallet_utils.cpp  coinevo_wallet_utils.hpp  serial_bridge_index.cpp  serial_bridge_index.hpp  serial_bridge_utils.cpp  serial_bridge_utils.hpp  tools__ret_vals.cpp  tools__ret_vals.hpp
test/: test_all.cpp
